[gd_scene load_steps=40 format=3 uid="uid://xm70t0chw1ve"]

[ext_resource type="Script" path="res://Player.gd" id="1_4ckly"]
[ext_resource type="Texture2D" uid="uid://b5bty7kcnb6ec" path="res://art/Knight/idle1.png" id="2_3et13"]
[ext_resource type="Texture2D" uid="uid://cjvmy3abs6shj" path="res://art/Knight/death1.png" id="2_h75ni"]
[ext_resource type="Texture2D" uid="uid://cv8m8tc4nu6me" path="res://art/Knight/death2.png" id="3_7834q"]
[ext_resource type="Texture2D" uid="uid://dttgovkibacmi" path="res://art/Knight/idle2.png" id="3_iw6xh"]
[ext_resource type="Texture2D" uid="uid://djj3xfocph5bx" path="res://art/Knight/Heavy Knighty run red.png" id="4_6yfx2"]
[ext_resource type="Texture2D" uid="uid://c0nxpxh2pdlrn" path="res://art/Knight/parry1.png" id="6_txy3r"]
[ext_resource type="Texture2D" uid="uid://bmty1xemk38rj" path="res://art/Knight/parry2.png" id="7_obdap"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ht55i"]
radius = 11.0
height = 46.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tl7v5"]
atlas = ExtResource("2_h75ni")
region = Rect2(91, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1qr2"]
atlas = ExtResource("2_h75ni")
region = Rect2(182, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp7ri"]
atlas = ExtResource("2_h75ni")
region = Rect2(273, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_pthnh"]
atlas = ExtResource("2_h75ni")
region = Rect2(364, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kf1m"]
atlas = ExtResource("3_7834q")
region = Rect2(0, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7as5"]
atlas = ExtResource("3_7834q")
region = Rect2(91, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_14846"]
atlas = ExtResource("3_7834q")
region = Rect2(182, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_djxsf"]
atlas = ExtResource("3_7834q")
region = Rect2(273, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ypmk"]
atlas = ExtResource("3_7834q")
region = Rect2(364, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbjil"]
atlas = ExtResource("2_3et13")
region = Rect2(182, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsu2t"]
atlas = ExtResource("2_3et13")
region = Rect2(273, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_80xmh"]
atlas = ExtResource("2_3et13")
region = Rect2(364, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5ija"]
atlas = ExtResource("3_iw6xh")
region = Rect2(0, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fateg"]
atlas = ExtResource("3_iw6xh")
region = Rect2(91, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k1ta"]
atlas = ExtResource("6_txy3r")
region = Rect2(182, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_npu7d"]
atlas = ExtResource("6_txy3r")
region = Rect2(273, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff0vd"]
atlas = ExtResource("6_txy3r")
region = Rect2(364, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwrvu"]
atlas = ExtResource("7_obdap")
region = Rect2(0, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj3xt"]
atlas = ExtResource("7_obdap")
region = Rect2(91, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gnjr"]
atlas = ExtResource("7_obdap")
region = Rect2(182, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8rr5"]
atlas = ExtResource("7_obdap")
region = Rect2(273, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1b2d"]
atlas = ExtResource("7_obdap")
region = Rect2(364, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nvqp"]
atlas = ExtResource("4_6yfx2")
region = Rect2(0, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_27xml"]
atlas = ExtResource("4_6yfx2")
region = Rect2(91, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_v11ef"]
atlas = ExtResource("4_6yfx2")
region = Rect2(182, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpxuc"]
atlas = ExtResource("4_6yfx2")
region = Rect2(273, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj7ac"]
atlas = ExtResource("4_6yfx2")
region = Rect2(364, 0, 91, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_avhdg"]
atlas = ExtResource("4_6yfx2")
region = Rect2(455, 0, 91, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_uo31n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl7v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1qr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp7ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pthnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kf1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7as5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14846")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djxsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ypmk")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbjil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsu2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80xmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5ija")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fateg")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k1ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npu7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff0vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwrvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj3xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gnjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8rr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1b2d")
}],
"loop": false,
"name": &"Parry",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nvqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27xml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v11ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpxuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj7ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avhdg")
}],
"loop": true,
"name": &"Running",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hkbm8"]
radius = 11.0
height = 44.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4ckly")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(51, 19)
shape = SubResource("CapsuleShape2D_ht55i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(50, 7)
sprite_frames = SubResource("SpriteFrames_uo31n")
animation = &"Parry"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(51, 19)
shape = SubResource("CapsuleShape2D_hkbm8")

[node name="ParryHitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(51, 19)
shape = SubResource("CapsuleShape2D_hkbm8")
disabled = true

[node name="ParryTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ParryTimer" to="." method="_on_parry_timer_timeout"]
